--- a/front page/index.css
+++ b/front page/index.css
@@ -1,5 +1,8 @@
 *{
     box-sizing:border-box;
+    margin:0;
+    padding:0;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     margin:0;
@@ -107,53 +110,140 @@ nav .icon-burger .line{
         bottom:0;
     }
 
-    .our_pics{
+    .content-contact{
         flex-direction: column;
     }
+    
 }
 
-#home{
+#home {
     height:700px;
     width:100%;
     background-image: url("2393089.jpg");
     
 }
-#About_us{
-    height:720px;
-    width:100%;
-    background-image:linear-gradient(to right,rgb(156, 60, 84),#7e84d5,#D57E7E,#A2CDCD,#FFE1AF);
+#about-us {
+    margin:2%;
+    padding:1%;
+    text-align:center;
+    height:25%;
+    color:rgb(110, 104, 104);
 }
-.abt_project_div{
-    height:50%;
-    width:100%;
+#about-us h1 {
+    margin:2%;
+    color:#006778;
+}
+.our_pics {
     display:flex;
-    justify-content: center;
-    text-align: center;
-}
-.abt_project h1{
-    margin-top: 10%;
-    color:aliceblue;
-}
-.abt_project{
-    width:60%;
-    height:100%;
-    text-align: center;
-}
-.our_pics{
-    display:flex;
-    justify-content: center;
-    text-align: center;
     width:100%;
     height:50%;
-    
 }
-.amrita, .anu, .anushka, .shivangi{
-    margin-top:3%;
-   height:50%;
-   background-color:white;
-   margin-left: 10%;
+.pic {
+    margin:2%;
+    width:10%;
 }
-#feedback{
+#contact_us {
+    background-color: rgb(90,120,144);
+    width:100%;
+    padding:2%;
+    color:rgb(242,242,242);
+}
+.content-contact {
+    display: flex;
+    align-items: center;
+    width:100%;
+    padding:2%;
+}
+.left {
+    padding:2%;
+    width:50%;
+    text-align: center;
+    background-color: rgb(90,120,144);
+}
+.left img {
+    width:50%;
+}
+.right {
+    width:50%;
+    padding:2%;
+    border:2px solid;
+    text-align: center;
+}
+.right input {
+    margin:3% 0;
+    width:80%;
+    height:10%;
+    padding:2%;
+    background-color: rgb(242,242,242);
+    border:none;
+}
+
+.right button {
+    padding:1%;
+    height:10%;
+    background-color:rgba(3, 13, 20, 0.712);
+    border:none;
+    color:rgb(242,242,242);
+    width:30%;
+}
+.right p {
+    margin:5%;
+}
+.right i {
+    margin:0 1%;
+}
+.right i:hover {
+    color:rgb(28,43,55);
+    font-size: x-large;
+}
+#feedback {
     width:100%;
     height:700px;
+    padding:1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("feedback.jpeg");
 }
+#feedback div {
+    margin:1%;
+    padding:2%;
+    width:60%;
+    height:70%;
+    text-align: center;
+    background-color: #012443;
+}
+#feedback i {
+    font-size: 70px;
+    margin:2%;
+    color:rgb(184, 184, 179);
+}
+#feedback .orange:hover{
+    color:orange;
+}
+#feedback .red:hover{
+    color:red;
+}
+#feedback .yellow:hover{
+    color:#FAFF00;
+}
+#feedback .green:hover{
+    color:green;
+}
+#feedback input {
+    margin:1%;
+    padding:1%;
+    width:80%;
+    height:50%;
+    background-color: #f7f2f5;
+    color:white;
+    border:none;
+}
+#feedback button {
+    margin:2%;
+    padding:2%;
+    border:none;
+    background-color: #00a8e9;
+    color:white;
+}   
